0.29v - Added fixed chat and fixed bug with overflow style of main

--- a/src/sass/_layout.sass
+++ b/src/sass/_layout.sass
@@ -50,6 +50,8 @@ ol, ul
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section
 	display: block
 
+main
+	overflow-x: hidden
 
 a
 	transition: color .3s
